<resources>
    <string name="app_name">FoodlyAndroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etUsernameInvalido">Username Inválido</string>
    <string name="etEmailInvalido">Email Inválido</string>
    <string name="etPasswordInvalida">Password Inválida</string>
    <string name="etNomeCompletoInvalido">Nome Completo Inválido</string>
    <string name="etGeneroInvalido">Genero Inválido</string>
    <string name="etIdadeInvalida">Idade Inválida</string>
    <string name="etContactoInvalido">Contacto Inválido</string>
    <string name="etMoradaInvalida">Morada Inválida</string>
    <string name="etAlergiasInvalidas">Alergias Inválidas</string>
    <string name="ndOpen">drawerOpne</string>
    <string name="ndClose">drawerClose</string>
    <string name="respostaSim">Sim</string>
    <string name="respostaNao">Não</string>
    <string name="respostaVoltar">Voltar</string>
    <string name="adicionarReviewTitulo">Adicionar Review</string>
    <string name="adicionarReviewCaps">ADICIONAR REVIEW</string>
    <string name="perguntaAdicionarReview">Deseja adcionar a review?</string>
    <string name="reviewSucesso">Review adicionada com sucesso</string>
    <string name="registarSucesso">Registo feito com sucesso</string>
    <string name="fragmentoErro">Erro ao criar fragmento</string>
    <string name="editarPerfilTitulo">Editar Perfil</string>
    <string name="opcaoSelecionarImagem">Selecione uma opção para carregar imagem:</string>
    <string name="fazerPedidoTitulo">Fazer Pedido</string>
    <string name="finalizarPedido">Finalizar Pedido</string>
    <string name="listaRestaurantesTitulo">Lista Restaurantes</string>
    <string name="logoutTitulo">Logout</string>
    <string name="logoutPerguntaSair">Deseja mesmo sair?</string>
    <string name="eliminarReviewTitulo">ELIMINAR REVIEW</string>
    <string name="eliminarReviewSair">Deseja eliminar a review?</string>
    <string name="reviewRemovidaSucesso">Review removida com sucesso</string>
    <string name="criarContaTitulo">Criar Conta</string>
    <string name="STARTERS">STARTERS</string>
    <string name="SALADS">SALADS</string>
    <string name="MAINCOURSE">MAIN COURSE</string>
    <string name="DRINKS">DRINKS</string>
    <string name="DESSERTS">DESSERTS</string>
    <string name="restauranteAdicionadoFavoritos">Restaurante adicionado aos favoritos</string>
    <string name="removerTitulo">REMOVER</string>
    <string name="removerFavoritoPergunta">Deseja remover este restaurante dos favoritos?</string>
    <string name="removidoFavoritos">Restaurante removido dos favoritos</string>
    <string name="comentarioTitulo">Comentário</string>
    <string name="naoExistemReviews">Não existem reviews</string>
    <string name="pessimo">Péssimo</string>
    <string name="mau">Mau</string>
    <string name="mediocre">Medíocre</string>
    <string name="bom">Bom</string>
    <string name="excelente">Excelente</string>
    <string name="avalia_o_restaurante">Avalia o restaurante</string>
    <string name="adiciona_uma_descricao">Adiciona uma descrição</string>
    <string name="submeter_review">SUBMETER REVIEW</string>
    <string name="entradas">ENTRADAS</string>
    <string name="pratos_princiapis">PRATOS PRINCIAPIS</string>
    <string name="sobremesas">SOBREMESAS</string>
    <string name="nome">Nome</string>
    <string name="qtd">Qtd</string>
    <string name="preco">Preço</string>
    <string name="total">Total</string>
    <string name="total_caps">TOTAL</string>
    <string name="euro">€</string>
    <string name="pedir">PEDIR</string>
    <string name="foodly">Foodly</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="faz_login_para_continuar">Faz login para continuar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="esqueces_te_a_password">Esqueces-te a password?</string>
    <string name="login">LOGIN</string>
    <string name="ainda_nao_tens_conta">Ainda não tens conta?</string>
    <string name="regista_te">Regista te</string>
    <string name="lembrar_conta">Lembrar conta</string>
    <string name="adicionar_foto">Adicionar Foto</string>
    <string name="email">Email</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="genero">Género</string>
    <string name="idade">Idade</string>
    <string name="contacto">Contacto</string>
    <string name="morada">Morada</string>
    <string name="alergias">Alergias</string>
    <string name="editar_caps">EDITAR</string>
    <string name="saladas">SALADAS</string>
    <string name="bebidas">BEBIDAS</string>
    <string name="nome_do_restaurante">Nome do Restaurante</string>
    <string name="telefone">Telefone:</string>
    <string name="email_restaurante">Email:</string>
    <string name="aberto_restaurante">Aberto -</string>
    <string name="pessoas_restaurante">Pessoas -</string>
    <string name="espaco_de_espaco">de</string>
    <string name="espaco_hifen_espaco">-</string>
    <string name="fazer_pedido">FAZER PEDIDO</string>
    <string name="descriao_do_restaurante">Descrição do restaurante</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="animais">Animais</string>
    <string name="de_acordo_com">de acordo com </string>
    <string name="pessoas">pessoas</string>
    <string name="nota5">/5</string>
    <string name="comentariosReviews">Comentários</string>
    <string name="restaurante">Restaurante</string>
    <string name="pessoa">pessoa</string>
    <string name="informaco">Informação</string>
    <string name="ementa">Ementa</string>
    <string name="reviews">Reviews</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="favoritos">Favoritos</string>
    <string name="noConnection">Não tem ligação à rede</string>
    <string name="check_finalizarpedido">Faça o seu pedido antes de o finalizar</string>
    <string name="reviewMaiorZero">Review NÃO adicionada. Nrº de estrelas tem que ser maior que 0</string>
    <string name="pedidoAdicionadoSucesso">Pedido adicionado com sucesso</string>
</resources>