<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.RestauranteInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewRestaurantImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_restaurante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewFav"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_restaurante_fav_false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewRestaurantImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewRestaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/nome_do_restaurante"
                    android:textColor="@color/cinza"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textViewRestaurantLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/morada"
                    android:textColor="@color/cinza"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/telefone"
                        android:textColor="@color/roxo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="931234567"
                        android:textColor="@color/cinza"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/email_restaurante"
                        android:textColor="@color/roxo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="restaurante_email@gmail.com"
                        android:textColor="@color/cinza"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRestaurantHourState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/aberto_restaurante"
                        android:textColor="@color/roxo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantOpeningHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text=" 7:00"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/espaco_hifen_espaco"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantClosingHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="23:00"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/pessoas_restaurante"
                        android:textColor="@color/roxo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantCurrentPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="10"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/espaco_de_espaco"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewRestaurantMaxPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="50"
                        android:textColor="@color/cinza"
                        android:textSize="18sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonFazerPedido"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_login"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/fazer_pedido"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewRestaurantDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/descriao_do_restaurante"
                    android:textColor="@color/cinza"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRestaurantHasWiFiPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/wi_fi"
                        android:textColor="@color/cinza"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/ic_task_false" />

                    <TextView
                        android:id="@+id/textViewRestaurantWiFiPasswordText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/cinza"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRestaurantHasVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/vegetariano"
                    android:textColor="@color/cinza"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_task_false" />

                <TextView
                    android:id="@+id/textViewRestaurantAllowsPets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/animais"
                    android:textColor="@color/cinza"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_task_false" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>